flip clock proto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<script src='flipclock.js' type='text/javascript'></script> 
 	</head>
 	<body>
-		<div id='flipclock'></div>
+		<div id='flipClock'></div>
 	</body>
 </html>
 
