--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <html>
 	<head>
-		<script src='flipclock.js' type='text/javascript'></script> 
+		<script src='flipCounter.js' type='text/javascript'></script> 
 		<script>
 			window.onload = function() {
-				flipClock.init({
-					id : "flipClock-small",
+				flipCounter.init({
+					id : "flipCounter-small",
 					type : "small",
 					digitLength : 8,
 				});	
-				flipClock.init({
-					id : "flipClock-default",
+				flipCounter.init({
+					id : "flipCounter-default",
 				});
-				flipClock.demo();	
+				flipCounter.demo();	
 			}
 		</script>
 	</head>
 	<body>
 		Small<br>
-		<div id='flipClock-small'></div>
+		<div id='flipCounter-small'></div>
 		Default <br>
-		<div id='flipClock-default'></div>
+		<div id='flipCounter-default'></div>
 	</body>
 </html>
 
